fix(list-view bug): fix for overlapping text

--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -502,7 +502,7 @@ input.list-check-all, input.list-row-checkbox {
 }
 
 .list-item {
-	display: flex;
+	display: inline-table;
 	align-items: center;
 	cursor: pointer;
 
